--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="calculator">
         <h1>BMI Calculator</h1>
-        <label for="height">Height (in cm):</label>
+        <label for="height">Height in <span>cm</span></label>
         <input type="number" id="height" placeholder="Enter your height">
         
-        <label for="weight">Weight (in kg):</label>
+        <label for="weight">Weight in <span>kg</span></label>
         <input type="number" id="weight" placeholder="Enter your weight">
         
         <button onclick="calculateMBI()">Calculate BMI</button>
